apps/media-server/wizarr/wizarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wizarr
  namespace: media
spec:
  selector:
    app: wizarr
  ports:
    - protocol: TCP
      port: 5690
      targetPort: 5690
