apps/media-server/wizarr/wizarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wizarr
  namespace: media
  annotations:
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  rules:
    - host: wizarr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wizarr
                port:
                  number: 5690
  tls:
    - hosts:
        - wizarr
